@@ -1,0 +1,82 @@
+<?php
+/***************************************************************
+ *  Copyright notice
+ *
+ *  (c) 2012 Xavier Perseguers <xavier@causal.ch>
+ *  All rights reserved
+ *
+ *  This script is part of the TYPO3 project. The TYPO3 project is
+ *  free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  The GNU General Public License can be found at
+ *  http://www.gnu.org/copyleft/gpl.html.
+ *
+ *  This script is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  This copyright notice MUST APPEAR in all copies of the script!
+ ***************************************************************/
+
+/**
+ * Class that adds the wizard icon.
+ *
+ * @category    Plugin
+ * @package     TYPO3
+ * @subpackage  tx_egovapi
+ * @author      Xavier Perseguers <xavier@causal.ch>
+ * @copyright   Causal Sàrl / SECO (http://www.cyberadmin.ch/)
+ * @license     http://www.gnu.org/copyleft/gpl.html
+ * @version     SVN: $Id$
+ */
+class tx_egovapi_pi3_wizicon {
+
+	/**
+	 * Processing the wizard items array
+	 *
+	 * @param array $wizardItems The wizard items
+	 * @return array Modified array with wizard items
+	 */
+	public function proc(array $wizardItems) {
+		$LL = $this->includeLocalLang();
+
+		$wizardItems['plugins_tx_egovapi_pi3'] = array(
+			'icon'        => t3lib_extMgm::extRelPath('egovapi') . 'Resources/Public/Icons/pi3_ce_wizard.png',
+			'title'       => $GLOBALS['LANG']->getLLL('pi3_title', $LL),
+			'description' => $GLOBALS['LANG']->getLLL('pi3_plus_wiz_description', $LL),
+			'params'      => '&defVals[tt_content][CType]=list&defVals[tt_content][list_type]=egovapi_pi3'
+		);
+
+		return $wizardItems;
+	}
+
+	/**
+	 * Reads the extension locallang.xml and returns the $LOCAL_LANG array found in that file.
+	 *
+	 * @return array The array with language labels
+	 */
+	protected function includeLocalLang() {
+		$version = class_exists('t3lib_utility_VersionNumber')
+				? t3lib_utility_VersionNumber::convertVersionNumberToInteger(TYPO3_version)
+				: t3lib_div::int_from_ver(TYPO3_version);
+		if ($version < 4006000) {
+			$llFile = t3lib_extMgm::extPath('egovapi') . 'Resources/Private/Language/locallang.xml';
+		} else {
+			$llFile = t3lib_extMgm::extPath('egovapi') . 'Resources/Private/Language/locallang.xlf';
+		}
+
+		return $GLOBALS['LANG']->includeLLFile($llFile, FALSE);
+	}
+}
+
+
+
+if (defined('TYPO3_MODE') && isset($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/egovapi/Classes/Controller/Pi3/class.tx_egovapi_pi3_wizicon.php'])) {
+	include_once($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/egovapi/Classes/Controller/Pi3/class.tx_egovapi_pi3_wizicon.php']);
+}
+
+?>
