@@ -7,5 +7,8 @@ cacheLifetime=604800
 	# cat=advanced/enable; type=boolean; label=LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.enableSelectorPlugins
 enableSelectorPlugins=0
 
+	# cat=advanced/enable; type=boolean; label=LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.enableRdfGenerator
+enableRdfGenerator=0
+
 	# cat=advanced/api; type:string; label=LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.wsdl.global
 wsdl=
