@@ -5,6 +5,7 @@ if (!defined('TYPO3_MODE')) {
 
 $extConf = unserialize($TYPO3_CONF_VARS['EXT']['extConf'][$_EXTKEY]);
 $enableSelectorPlugins = isset($extConf['enableSelectorPlugins']) && (bool)$extConf['enableSelectorPlugins'];
+$enableRdfGenerator = isset($extConf['enableRdfGenerator']) && (bool)$extConf['enableRdfGenerator'];
 
 t3lib_extMgm::addPItoST43($_EXTKEY, 'Classes/Controller/Pi1/class.tx_egovapi_pi1.php', '_pi1', 'list_type', 1);
 
@@ -13,6 +14,10 @@ if ($enableSelectorPlugins) {
 
 	// Ajax configuration (through eID)
 	$TYPO3_CONF_VARS['FE']['eID_include'][$_EXTKEY . '_pi2'] = 'EXT:' . $_EXTKEY . '/Classes/Controller/Pi2/Ajax.php';
+}
+
+if ($enableRdfGenerator) {
+	t3lib_extMgm::addPItoST43($_EXTKEY, 'Classes/Controller/Pi3/class.tx_egovapi_pi3.php', '_pi3', 'list_type', 0);
 }
 
 // Allow manual flush of cache entries (mandatory in TYPO3 4.6)
