@@ -1,3 +1,7 @@
+2012-03-21  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK] Kickstart the RDF generator
+
 2012-01-30  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] Remove &nbsp; entities which are not needed anymore
